Fully implement roundingand overflow prevention for very long numbers

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ html, body {
     width: 500px;
     background-color: black;
     border-radius: 10px;
+    overflow: hidden;
 
     display: flex;
     justify-content: flex-end;
